# strands_morse

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  morse_config.py  package.xml  simulator.sh
TO-BE-MOVED/strands_morse_2dnav/: cs_1.yaml  manifest.xml  map.pgm  robot.launch
aachen/: aachen.py  aachen_fm.py
aachen/data/: UMIC1st.blend
aachen/launch/: aachen_morse.launch  aachen_morse_fm.launch  aachen_nav2d.launch  aachen_navigation.launch
aaf/: aaf.py  aaf_sim.py  aaf_sim_fast.py
aaf/data/: aaf_sim.blend
aaf/launch/: aaf_morse.launch  aaf_sim_morse.launch  aaf_sim_nav2d.launch
aaf/maps/: aaf3.yaml  aaf_HAN_SIM_y4.tplg  aaf_WG_HAN_SIM_y4.tplg  aaf_sim.pgm  aaf_sim.yaml  aaf_winter.json
aloof/: aloof.py
aloof/data/: aloof.blend  aloof_env.mtl  aloof_env.sh3d
aloof/launch/: aloof.rviz  aloof_morse.launch  aloof_nav2d.launch  aloof_navigation.launch
aloof/maps/: aloof.tplg  aloof_top_map.yaml  cropped.pgm  cropped.yaml
basic_example/: default.rviz  example_sim.py
basic_example/conf/: basic_routine.yaml
basic_example/launch/: basic_example.launch  basic_example_executor.launch  basic_example_nav.launch  (+2 more)
bham/: README.md  cs.py  cs_1.py  cs_2.py  cs_common_room.py  cs_lg.py  cs_lg.rviz  cs_lg_obj_search.py  cs_lg_scene_generation.py  cs_ug.py  default.py  default.rviz
bham_cs_sim/: CMakeLists.txt  README.md  bham_cs.py  bham_cs_LG.py  bham_cs_common_room.py  default.py  package.xml  simulator.sh
bham_cs_sim/data/: CS_Building.blend  CS_Building_1.blend  CS_Building_2.blend  CS_Building_LG.blend  CS_Building_old.blend
bham_cs_sim/data/bham_cs_sim/robots/: elevator.blend
bham_cs_sim/launch/: bham_cs_LG_nav2d.launch  bham_cs_level_1_nav2d.launch
bham_cs_sim/maps/architecture/: readme.rst
bham_cs_sim/maps/real/: UG.yaml
bham_cs_sim/maps/simulated/: cs_LG.yaml  readme.rst
bham_cs_sim/src/bham_cs_sim/actuators/: platform.py  slidingdoor.py
bham_cs_sim/src/bham_cs_sim/builder/actuators/: __init__.py  platform.py  slidingdoor.py
bham_cs_sim/src/bham_cs_sim/builder/robots/: elevator.py
bham_cs_sim/src/bham_cs_sim/robots/: elevator.py
collection/: collection.py  collection_fast.py
env_hooks/: 90.morse-blender-env.sh.em
g4s/: g4s.py
indoors-1/: indoors-1.py
kth/: floorsix.py
kth/maps/: map.pgm  (+1 more)
launch/: generate_camera_topics.launch  scitos.launch  scitos_node.launch
mba/: mba.py  mba_fast.py  mba_human_fast.py  mba_test.py
scripts/: human_pose_simulator.py  posetransformer_node.py
strands_executive/: mainpage.dox  manifest.xml
strands_morse_2dnav/: map.yaml  nav.launch  nav_cs_1.launch  scitosa5.urdf
strands_sim/: bham_cs.py  bham_cs_LG.py  bham_cs_common_room.py  default-with-kinect.py  default.py  manifest.xml  simulator.sh
the_collection/: collection_nocam_fast.py
tsc/: tsc.py  tsc_fast.py
tum/: default.py  tum_kitchen.py  tum_kitchen_WITHOUT_CAMERAS.py  tum_kitchen_human.py
tum_kitchen/: default-with-kinect.py
uol/: uol_bl.py  uol_bl_fast.py  uol_bl_human.py  uol_bl_human_fast.py  uol_mht.py  uol_mht_human.py  uol_mht_human_nocam.py  uol_mht_human_nocam_fast.py  uol_mht_human_nodepthcam.py  uol_mht_nocam.py  uol_mht_nocam_fast.py  uol_mht_nodepthcam.py  uol_study_restaurant.py  uol_ww.py
(+187 files in other folders)
