<?xml version="1.0"?>
<package>
  <name>strands_morse</name>
  <version>0.0.1</version>
  <description>The strands_morse package</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <maintainer email="l.kunze@cs.bham.ac.uk">Lars Kunze</maintainer>
  <maintainer email="cburbridge@gmail.com">Chris Burbridge</maintainer>
  

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <url type="website">http://www.strands-project.eu</url>
  <url type="repository">https://github.com/strands-project/strands_morse</url>
  <url type="bugtracker">https://github.com/strands-project/strands_morse/issues</url>


  <author email="l.kunze@cs.bham.ac.uk">Lars Kunze</author>
  <author email="cburbridge@gmail.com">Chris Burbridge</author>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>scitos_msgs</run_depend>
  <run_depend>scitos_description</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
