<?xml version="1.0"?>
<package>
  <name>bham_cs_sim</name>
  <version>0.0.0</version>
  <description>Simulation of the Computer Science building at the University of Birmingham.</description>
  
  <maintainer email="cburbridge@gmail.com">cburbridge</maintainer>
  
  <license>TODO</license>
  
  
  <author email="cburbridge@gmail.com">Chris Burbridge</author> 
  
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  
</package>